--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sayhi-ai",
-  "version": "0.0.9",
+  "version": "0.9.0",
   "description": "Human responses for your bots - Turn your bot's language into human language.",
   "main": "lib/lib.min.js",
   "repository": {
@@ -68,28 +68,16 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "coffee-coverage": "^1.0.1",
-    "coveralls": "^2.11.15",
     "esdoc": "^0.4.8",
-    "isparta": "^4.0.0",
-    "minami": "^1.1.1",
-    "mocha": "^3.1.2",
-    "mocha-lcov-reporter": "^1.2.0",
     "npm-run-all": "^3.1.1",
     "webpack": "^1.13.3"
   },
   "scripts": {
-    "start": "npm-run-all build test",
-    "test": "mocha --compilers js:babel-register --require babel-polyfill",
-    "cover": "babel-node ./node_modules/.bin/isparta cover _mocha",
-    "precoveralls": "npm run cover",
-    "coveralls": "coveralls < coverage/lcov.info",
-    "build": "webpack -p",
+    "start": "webpack -p",
     "generate-docs": "esdoc -c esdoc.json",
     "deploy-docs": "gh-pages-deploy",
     "clean-source": "rimraf README.md src webroot package.json",
-    "prepublish": "npm-run-all build test"
+    "prepublish": "webpack -p"
   },
   "gh-pages-deploy": {
     "staticpath": "./docs",
