Added license and published stuff

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "for"
   ],
   "author": "sayhi-ai",
-  "license": "GPL",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sayhi-ai/sayhi-npm/issues"
   },
