--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.1.0",
+    "lokka": "^1.7.0",
+    "lokka-transport-http": "^1.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -80,7 +83,8 @@
     "eslint-config-google": "^0.6.0",
     "json-loader": "^0.5.4",
     "npm-run-all": "^3.1.1",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "winston": "^2.3.0"
   },
   "scripts": {
     "start": "npm-run-all lint build",
